Fixed promo screen braking on smaller screens

--- a/Prototype3/promoStyle.css
+++ b/Prototype3/promoStyle.css
@@ -68,7 +68,7 @@ body{
 
 p, a, h1{
 	margin: 15px 35px;
-	width: 50%;
+	width: 40%;
 	font-size: 1.2em;
 	font-weight: 300;
 }
